// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialEmbedContainer AMP should match snapshot 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 14rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  margin: 0;
  background-color: transparent;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 .twitter-tweet {
  margin-top: 0!important;
  margin-bottom: 10rem!important;
}

.emotion-10 .twitter-tweet-rendered {
  margin-bottom: 0!important;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #545658;
  padding: 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.8125rem;
  }
}

.emotion-12>span {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  dir="ltr"
>
  <div
    class="emotion-2 emotion-3"
    data-e2e="twitter-embed-https://twitter.com/BBCNews/status/1384138850478346243?s=20"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        class="emotion-6 emotion-7"
        href="#end-of-twitter-content-1"
      >
        <span>
          Skip Twitter content, 1
        </span>
      </a>
      <figure
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <blockquote
            class="twitter-tweet"
          >
            <p
              dir="ltr"
              lang="en"
            >
              Greta Thunberg says meeting fellow climate campaigner Sir David Attenborough was "indescribable" 
              <a
                href="https://t.co/xz93WmAdfR"
              >
                https://t.co/xz93WmAdfR
              </a>
            </p>
            — BBC News (UK) (@BBCNews) 
            <a
              href="https://twitter.com/BBCNews/status/1384138850478346243?ref_src=twsrc%5Etfw"
            >
              April 19, 2021
            </a>
          </blockquote>
          

        </div>
        <figcaption
          class="emotion-12 emotion-13"
        >
          <span>
            Video caption, 
          </span>
          Warning: The BBC is not responsible for the content of external sites.
        </figcaption>
      </figure>
      <p
        class="emotion-14 emotion-15"
        id="end-of-twitter-content-1"
        tabindex="-1"
      >
        End of Twitter content, 1
      </p>
    </div>
  </div>
</div>
`;

exports[`SocialEmbedContainer Canonical should render a Twitter block and unmount correctly 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 14rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  margin: 0;
  background-color: transparent;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 .twitter-tweet {
  margin-top: 0!important;
  margin-bottom: 10rem!important;
}

.emotion-10 .twitter-tweet-rendered {
  margin-bottom: 0!important;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #545658;
  padding: 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.8125rem;
  }
}

.emotion-12>span {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  dir="ltr"
>
  <div
    class="emotion-2 emotion-3"
    data-e2e="twitter-embed-https://twitter.com/BBCNews/status/1384138850478346243?s=20"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        class="emotion-6 emotion-7"
        href="#end-of-twitter-content-1"
      >
        <span>
          Skip Twitter content, 1
        </span>
      </a>
      <figure
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <blockquote
            class="twitter-tweet"
          >
            <p
              dir="ltr"
              lang="en"
            >
              Greta Thunberg says meeting fellow climate campaigner Sir David Attenborough was "indescribable" 
              <a
                href="https://t.co/xz93WmAdfR"
              >
                https://t.co/xz93WmAdfR
              </a>
            </p>
            — BBC News (UK) (@BBCNews) 
            <a
              href="https://twitter.com/BBCNews/status/1384138850478346243?ref_src=twsrc%5Etfw"
            >
              April 19, 2021
            </a>
          </blockquote>
          

        </div>
        <figcaption
          class="emotion-12 emotion-13"
        >
          <span>
            Video caption, 
          </span>
          Warning: The BBC is not responsible for the content of external sites.
        </figcaption>
      </figure>
      <p
        class="emotion-14 emotion-15"
        id="end-of-twitter-content-1"
        tabindex="-1"
      >
        End of Twitter content, 1
      </p>
    </div>
  </div>
</div>
`;

exports[`SocialEmbedContainer Canonical should render a Twitter block and unmount correctly for STY page 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 14rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  margin: 0;
  background-color: #000000;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 .twitter-tweet {
  margin-top: 0!important;
  margin-bottom: 10rem!important;
}

.emotion-10 .twitter-tweet-rendered {
  margin-bottom: 0!important;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #FFFFFF;
  padding: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.8125rem;
  }
}

.emotion-12>span {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  dir="ltr"
>
  <div
    class="emotion-2 emotion-3"
    data-e2e="twitter-embed-https://twitter.com/BBCNews/status/1384138850478346243?s=20"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        class="emotion-6 emotion-7"
        href="#end-of-twitter-content-1"
      >
        <span>
          Skip Twitter content, 1
        </span>
      </a>
      <figure
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <blockquote
            class="twitter-tweet"
          >
            <p
              dir="ltr"
              lang="en"
            >
              Greta Thunberg says meeting fellow climate campaigner Sir David Attenborough was "indescribable" 
              <a
                href="https://t.co/xz93WmAdfR"
              >
                https://t.co/xz93WmAdfR
              </a>
            </p>
            — BBC News (UK) (@BBCNews) 
            <a
              href="https://twitter.com/BBCNews/status/1384138850478346243?ref_src=twsrc%5Etfw"
            >
              April 19, 2021
            </a>
          </blockquote>
          

        </div>
        <figcaption
          class="emotion-12 emotion-13"
        >
          <span>
            Video caption, 
          </span>
          Warning: Third party content may contain adverts
        </figcaption>
      </figure>
      <p
        class="emotion-14 emotion-15"
        id="end-of-twitter-content-1"
        tabindex="-1"
      >
        End of Twitter content, 1
      </p>
    </div>
  </div>
</div>
`;

exports[`SocialEmbedContainer Canonical should render a YouTube block and unmount correctly 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 7.0625rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  margin: 0;
  background-color: transparent;
}

.emotion-10 {
  background-color: #FFFFFF;
  padding: 1rem;
  min-height: 280px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 0.0625rem solid #8A8C8E;
}

.emotion-11 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #141414;
}

@media (min-width: 20rem) {
  .emotion-11 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-11 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #141414;
  margin: 1rem 0;
}

@media (min-width: 20rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-12 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.0625rem solid #141414;
}

.emotion-12 a:hover,
.emotion-12 a:focus {
  color: #B80000;
  border-bottom: 0.125rem solid #B80000;
}

.emotion-12 a:visited {
  color: #545658;
  border-bottom: 0.0625rem solid #545658;
}

.emotion-13 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #141414;
  background-color: #FFFFFF;
  border: 0.0625rem solid #8A8C8E;
  border-radius: 0;
  padding: 0.5rem;
  cursor: pointer;
}

@media (min-width: 20rem) {
  .emotion-13 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-13 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-13:hover,
.emotion-13:focus {
  background-color: #B80000;
  color: #FFFFFF;
  border: 0.0625rem solid #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #545658;
  padding: 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.8125rem;
  }
}

.emotion-14>span {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  dir="ltr"
>
  <div
    class="emotion-2 emotion-3"
    data-e2e="youtube-embed-https://www.youtube.com/embed/1e05_rwHvOM?feature=oembed"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        class="emotion-6 emotion-7"
        href="#end-of-youtube-content"
      >
        <span>
          Skip YouTube content
        </span>
      </a>
      <figure
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10"
          data-testid="consentBanner"
          id="consentBanner"
        >
          <strong
            class="emotion-11"
            data-testid="banner-heading"
          >
            Allow Google YouTube content?
          </strong>
          <p
            class="emotion-12"
            data-testid="banner-body"
          >
            This article contains content provided by Google YouTube.  We ask for your permission before anything is loaded, as they may be using cookies and other technologies.  You may want to read Google YouTube 
            <a
              aria-label="cookie policy, external"
              href="https://policies.google.com/technologies/cookies"
            >
              cookie policy
            </a>
             and 
            <a
              aria-label="privacy policy, external"
              href="https://policies.google.com/privacy"
            >
              privacy policy
            </a>
             before accepting. To view this content choose 'accept and continue'.
          </p>
          <button
            class="emotion-13"
            data-testid="banner-button"
            type="button"
          >
            Accept and continue
          </button>
        </div>
        <figcaption
          class="emotion-14 emotion-15"
        >
          <span>
            Video caption, 
          </span>
          Warning: The BBC is not responsible for the content of external sites. YouTube content may contain adverts
        </figcaption>
      </figure>
      <p
        class="emotion-16 emotion-17"
        id="end-of-youtube-content"
        tabindex="-1"
      >
        End of YouTube content
      </p>
    </div>
  </div>
</div>
`;

exports[`SocialEmbedContainer Canonical should render an Instagram block and unmount correctly 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 14rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  margin: 0;
  background-color: transparent;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 .instagram-media {
  margin-top: 0!important;
  margin-bottom: 0!important;
  min-width: auto!important;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #545658;
  padding: 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.8125rem;
  }
}

.emotion-12>span {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  dir="ltr"
>
  <div
    class="emotion-2 emotion-3"
    data-e2e="instagram-embed-https://www.instagram.com/reel/CeWO3HcIE9w/?utm_source=ig_embed&ig_rid=b6b91062-7174-4784-9a99-139d52bc5b29"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        class="emotion-6 emotion-7"
        href="#end-of-instagram-content-1"
      >
        <span>
          Skip Instagram content, 1
        </span>
      </a>
      <figure
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <blockquote
            class="instagram-media"
            data-instgrm-captioned=""
            data-instgrm-permalink="https://www.instagram.com/p/CgNAEjOK46_"
          >
            <p>
              <a
                href="https://www.instagram.com/p/CgNAEjOK46_"
                style="color:#000"
              >
                © 2020 Instagram
              </a>
            </p>
          </blockquote>
           
          <script
            async=""
            src="https://www.instagram.com/embed.js"
          />
        </div>
        <figcaption
          class="emotion-12 emotion-13"
        >
          <span>
            Video caption, 
          </span>
          Warning: The BBC is not responsible for the content of external sites.
        </figcaption>
      </figure>
      <p
        class="emotion-14 emotion-15"
        id="end-of-instagram-content-1"
        tabindex="-1"
      >
        End of Instagram content, 1
      </p>
    </div>
  </div>
</div>
`;
